# skill-memory

./: .env.example  .gitignore  README.md  SKILL.md  TESTING.md  install.sh  pyproject.toml
config/: defaults.py  hook.toml
data/: consolidation_state.json
docs/: AGENTS.md
hooks/: mem0_memory_hook.py  unified_hook.py
scripts/: batch_import.py  consolidate.py  deploy.sh  install.sh  mem0_client.py  memory.py  search.py  tier_manager.py
src/: cli.py  config.py  hook_config.py  mem0_client.py  mem0_embedder.py  memory_manager.py  qdrant_monitor.py  transcript_parser.py
src/triggers/: __init__.py  base.py
tests/: test_memory.py
