[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-memory"
version = "0.1.0"
description = "OpenClaw-style memory skill with 3-tier memory and hybrid search"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "jiazhizhuo" }
]
keywords = ["openclaw", "memory", "skill", "hybrid-search"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mem0ai>=0.1.0",
    "qdrant-client>=1.7.0",
    "sqlite-utils>=3.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
memory = "scripts.memory:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
